--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">android-beginner</string>
+    <string name="app_name">asauchi</string>
     <string name="roll">Roll</string>
 </resources>
